## Process this file with automake to produce Makefile.in
rcdir = $(QVWMDIR)
themes = default.qvwm-theme clouds.qvwm-theme space.qvwm-theme
rc_DATA = system.qvwmrc kanji.qvwmrc french.qvwmrc korean.qvwmrc \
          light.qvwmrc german.qvwmrc portuguese.qvwmrc italian.qvwmrc \
	  $(themes)

EXTRA_DIST = \
    system.qvwmrc.in kanji.qvwmrc.in french.qvwmrc.in korean.qvwmrc.in \
    light.qvwmrc.in german.qvwmrc.in portuguese.qvwmrc.in italian.qvwmrc.in \
    $(themes) Imakefile Makefile.std
