EXTRA_DIST = \
logo_qvwm11.xpm \
button_min.xpm \
button_max.xpm \
button_close.xpm \
button_restore.xpm \
cursor_arrow.xbm \
csmask_arrow.xbm \
cursor_size_h.xbm \
csmask_size_h.xbm \
cursor_size_v.xbm \
csmask_size_v.xbm \
cursor_size_l.xbm \
csmask_size_l.xbm \
cursor_size_r.xbm \
csmask_size_r.xbm \
cursor_busy.xbm \
csmask_busy.xbm \
cursor_move.xbm \
csmask_move.xbm \
cursor_wait.xbm \
csmask_wait.xbm \
cursor_no.xbm \
csmask_no.xbm \
folder16.xpm \
folder32.xpm \
icon16.xpm \
icon32.xpm \
logo16.xpm \
logo32.xpm \
next_black.xpm \
next_white.xpm \
check_black.xpm \
check_white.xpm \
selector_black.xpm \
selector_white.xpm \
radiobtn_normal.xpm \
radiobtn_push.xpm \
radiobtn_select.xpm \
tile0.xpm
